example modal which is shown based on pushes from the server
